# snoopdogg

./: .gitignore  README.md  commands.txt  docker-compose.yml  run.sh
docker/: Dockerfile  entrypoint.sh
servo_utils/: README.md  config.py  hardware_interface.py  move.py  move_gui.py  servo_calibration.py
servo_utils/tests/: test_hardware_interface.py
snoopy/install/: local_setup.sh  setup.sh
snoopy/install/demo_cpp/share/demo_cpp/: package.ps1  package.sh
snoopy/install/demo_cpp/share/demo_cpp/cmake/: demo_cppConfig.cmake
snoopy/install/demo_py/share/demo_py/: package.sh
snoopy/log/: latest_build
snoopy/src/comm_utils/: CMakeLists.txt  package.xml
snoopy/src/comm_utils/msg/: LegPosition.msg
snoopy/src/demo_cpp/: CMakeLists.txt  package.xml
snoopy/src/demo_py/: package.xml  setup.py
snoopy/src/inverse_kinematics/: CMakeLists.txt  package.xml
snoopy/src/inverse_kinematics/include/inverse_kinematics/: inverse_kinematics_lifecycle_component.hpp
snoopy/src/inverse_kinematics/launch/: launch.py
snoopy/src/inverse_kinematics/src/: inverse_kinematics_lifecycle_component.cpp
snoopy/src/servo_control/: CMakeLists.txt  package.xml
snoopy/src/servo_control/config/: servo_control_parameters.yaml
snoopy/src/servo_control/include/servo_control/: servo_control_lifecycle_component.hpp
snoopy/src/servo_control/launch/: launch.py
snoopy/src/servo_control/src/: servo_control_lifecycle_component.cpp
snoopy/src/simulation_bridge/: CMakeLists.txt  package.xml
snoopy/src/simulation_bridge/include/simulation_bridge/: simulation_bridge_lifecycle_component.hpp
snoopy/src/simulation_bridge/launch/: launch.py
snoopy/src/simulation_bridge/src/: simulation_bridge_lifecycle_component.cpp
snoopy/src/snoopy_description/: CMakeLists.txt  README.md  package.xml
snoopy/src/snoopy_description/config/: ros2_controllers.yaml
snoopy/src/snoopy_description/description/: robot.urdf.xacro
snoopy/src/snoopy_description/description/config/: snoopy_dimensions.xacro
snoopy/src/snoopy_description/description/urdf/: leg.urdf.xacro  snoopy.ros2_control.xacro
snoopy/src/snoopy_description/launch/: launch_sim.launch.py  rsp.launch.py
snoopy/src/snoopy_description/worlds/: basic.sdf  empty.sdf
