<?xml version="1.0"?>
<package format="3">
  <name>snoopy_description</name>
  <version>0.0.1</version>
  <description>URDF, meshes, and configuration files for the Snoopy quadruped robot.</description>

  <maintainer email="ammarmust4@gmail.com">Ammar Vora</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
